--- a/style.css
+++ b/style.css
@@ -29,11 +29,15 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     margin: 10px;
     height: 30px;
     width: 30px;
-    border-bottom: 5px solid red;
-    /* text */
-    color: white;
-    font-family: 'Press Start 2P', cursive;
-    font-size: 20px;
+    border-bottom: 5px solid rgb(255, 242, 242);
+   
+}
+.actual-letter{
+ /* text */
+ color: white;
+ font-family: 'Press Start 2P', cursive;
+ font-size: 20px;
+ margin-top: auto;
 }
 
 
@@ -88,13 +92,11 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 /* Scarecrew Image div */
 .scarecrow-div{
   float: left;
-  width: 20%;
+  width: 22%;
   padding: 5px;
-  height: 520px; /* Should be removed. Only for demonstration */
-  
-  
+  height: 520px; 
 
-  background-color: rgb(194, 194, 194,  0.3);
+  
 }
 
 
@@ -103,22 +105,22 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 #scarecrew-stick{
     position: relative;
     height: 80%;
-    top: 100px;
-    left: 110px;
+    top: 120px;
+    left: 130px;
  
 }
 
 #scarecrew-body{
     position: relative;
-    width: 65%;
-    bottom: 35px;
-    left: 0;
+    width: 60%;
+    bottom: 25px;
+    left: 20px;
 }
 
 #scarecrew-right-arm{
     position: relative;
     height: 13%;
-    left: 170px;
+    left: 205px;
     bottom: 200px;
    
 }
@@ -126,7 +128,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 #scarecrew-left-arm{
     position: relative;
     height: 13%;
-    right: 170px;
+    right: 145px;
     bottom: 200px;
    
     
@@ -136,15 +138,15 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     position: relative;
     height: 20%;
     bottom: 410px;
-    left: 50px;
+    left: 70px;
     
 }
 
 #scarecrew-hat{
     position: relative;
-    height: 15%;
-    bottom: 600px;
-    left: 50px;
+    height: 16%;
+    bottom: 490px;
+    right: 70px;
  
 }
 
@@ -152,7 +154,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     position: relative;
     height: 20%;
     bottom: 350px;
-    left: 85px;
+    left: 6px;
     
 }
 
@@ -160,6 +162,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     position: relative;
     height: 20%;
     bottom: 350px;
-    right: 200px;
+    left: 180px;
+    
 }
 
