--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    /* cursor: pointer */
+    cursor: pointer;
     /* Size */
     width: 55px;
     height: 55px;
@@ -179,21 +179,27 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    overflow: auto; /* Enable scroll if needed */        
+    /* background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4);  */
+    
   }
   
   /* Modal Content/Box */
   .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
+    background-color: rgb(0, 0, 0);
+    margin: 12% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 35%; /* Could be more or less, depending on screen size */
+    height: 35%;
+    /* text */
+    font-family: 'Creepster', cursive;  
+    color: white;
+    
   }
   
-  /* The Close Button */
+  /* The Close window */
   .close {
     color: #aaa;
     float: right;
@@ -203,11 +209,27 @@ html, body {margin: 0; height: 100%; overflow: hidden}
   
   .close:hover,
   .close:focus {
-    color: black;
+    color: rgb(183, 0, 0);
     text-decoration: none;
     cursor: pointer;
   }
 
 #model-msg{
-color: black;
+    color: rgba(133, 21, 21, 0.895);
+    font-size: 30px;
+    text-align: center;
+}
+
+/* Play again Button */
+#restart{
+    font-family: 'Press Start 2P', cursive;
+    margin-left: 30%; 
+    cursor: pointer;
+    padding: 10px;
+}
+
+#restart:hover,
+#restart:focus{
+    background-color: rgba(111, 0, 0, 0.886);
+    color: white;
 }
