--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     font-family: 'Creepster', cursive;                                   
     font-size: 50px;
     color: #E79C21;
-    padding-left: 15%;
+    padding-left: 10%;
 }
 
 .guessed-word{
@@ -179,9 +179,9 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     top: 0;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */        
-    /* background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4);  */
+    overflow: auto; /* Enable scroll if needed */   
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
     
   }
   
@@ -216,7 +216,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 
 #model-msg{
     color: rgba(133, 21, 21, 0.895);
-    font-size: 30px;
+    font-size: 35px;
     text-align: center;
 }
 
