--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    cursor: pointer;
+    /* cursor: pointer; */
     /* Size */
     width: 55px;
     height: 55px;
@@ -170,7 +170,7 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 
 
 /* ---------------MODEL----------------------------------------------------------------- */
-/* The Modal (background) */
+/*---------------------The Modal win-lose-------------------------------------*/
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -232,4 +232,66 @@ html, body {margin: 0; height: 100%; overflow: hidden}
 #restart:focus{
     background-color: rgba(111, 0, 0, 0.886);
     color: white;
+}
+
+/* -------------The Modal start game--------------------- */
+.modalInst {
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */   
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0, 0, 0, 0.635); 
+    
+  }
+  
+  /* Modal Content/Box */
+  .modal-content-inst{
+    background-color: rgb(0, 0, 0);
+    margin: 10% auto; /* 15% from the top and centered */
+    padding: 15px;
+    border: 1px solid #888;
+    width: 40%; /* Could be more or less, depending on screen size */
+    height: 50%;
+    /* text */
+    font-family: 'Creepster', cursive;  
+    color: white;
+    
+  }
+  
+  /* The Close window */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: rgb(183, 0, 0);
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+.model-msg-inst{
+    color: rgba(255, 124, 43, 0.895);
+    font-size: 25px;
+    text-align: center;
+}
+
+.model-msg-inst1{
+    color: rgba(255, 212, 185, 0.895);
+    font-size: 15px;
+    font-family: 'Press Start 2P', cursive;
+    
+}
+.model-msg-inst2{
+    color: rgba(229, 255, 0, 0.895);
+    font-size: 10px;
+    font-family: 'Press Start 2P', cursive;
+    margin-top: 10%;
 }
