updated background pic to svg

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url('../Images/Picture3.jpg');
+    background-image: url('../Images/Picture3.svg');
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
